[project]
name = "pyvalkey"
version = "0.0.5"
description = "pyvalkey: Python implemented Valkey server"
readme = "README.md"
license = "MIT License"
authors = [
    { name = "Netanel Revah", email = "netanelrevah@outlook.com" },
]
requires-python = ">=3.11"
dynamic = [ "dependencies" ]

[tool.poetry]
packages = [
    { include = "pyvalkey" },
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "*"
sortedcontainers = "*"
typing-extensions = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
valkey = "*"
pytest = "*"
pytest-parametrization = "*"
ruff = "*"
sortedcontainers-stubs = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

testpaths = "tests valkey_tests"

[tool.ruff]
target-version = "py311"
line-length = 120

lint.select = ["ANN", "I", "N", "UP", "PGH", "RUF", "F", "FA", "PL", "E"]
lint.ignore = [
    "E731",
    "RUF009",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLW2901",
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["ANN", "PLR2004", "PLR0913", "E501"]


[[tool.mypy.overrides]]
module = [
    "sortedcontainers",
    "typer"
]
ignore_missing_imports = true

