[project]
name = "pyvalkey"
version = "0.0.5"
description = "pyvalkey: Python implemented Valkey server"
readme = "README.md"
authors = [
    { name = "Netanel Revah", email = "netanelrevah@outlook.com" },
]
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.1.3",
    "sortedcontainers>=2.4.0",
    "typer>=0.15.1",
]

[project.optional-dependencies]
lua = [
    "lupa>=2.4",
    "u-msgpack-python>=2.8.0",
]

[tool.uv.build-backend]
module-name = "pyvalkey"
module-root = ""

[project.scripts]
valkey-server = "pyvalkey:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "docker>=7.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-parametrization>=2022.2.1",
    "ruff>=0.9.6",
    "sortedcontainers-stubs>=2.4.2",
    "types-lupa>=2.4.0.20250112",
    "valkey>=6.1.0",
    "lupa>=2.4",
    "u-msgpack-python>=2.8.0",
    "pytest-asyncio>=1.2.0",
    "ty>=0.0.1a23",
    "types-docker>=7.1.0.20251129",
    "types-psutil>=7.1.3.20251211",
]



[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

testpaths = "tests valkey_tests"

markers = [
    "slow",
    "string",
]

[tool.ruff]
target-version = "py311"
line-length = 120

lint.select = [
    "ANN",
    "E",
    "F",
    "FA",
    # "FBT",
    "FURB",
    "I",
    "N",
    "PGH",
    "PERF",
    "PL",
    "RUF",
    # "TRY",
    "UP",
    "YTT",
]
lint.ignore = [
    "E731",
    "RUF009",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLW2901",
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["ANN", "PLR2004", "PLR0913", "E501"]


[[tool.mypy.overrides]]
module = [
    "sortedcontainers",
    "typer",
    "umsgpack"
]
ignore_missing_imports = true

[tool.uv.workspace]
members = [
    "a",
]

